Full Flash now does tune

--- a/MSS6x_Tool/MSS6x_Tool_Free.csproj
+++ b/MSS6x_Tool/MSS6x_Tool_Free.csproj
@@ -77,7 +77,7 @@
     <Compile Include="AdvancedMenu.cs" />
     <Compile Include="FileManagement.cs" />
     <Compile Include="Checksums.cs" />
-    <Compile Include="Ediabas.cs" />
+    <Compile Include="EdiabasFuncs.cs" />
     <Compile Include="Ui.cs" />
     <Compile Include="MSS6x.cs" />
     <Compile Include="Conversions.cs" />
