--- a/MSS6x_Tool/Properties/AndroidManifest.xml
+++ b/MSS6x_Tool/Properties/AndroidManifest.xml
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- ReSharper disable MarkupAttributeTypo -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="8" android:versionName="1.08" package="com.argentraceworx.mss6xtoolfree" android:installLocation="internalOnly">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.00" package="com.argentraceworx.mss6xfree" android:installLocation="internalOnly">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
 	<uses-feature android:name="android.hardware.usb.host" />
-	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="MSS6x Tool" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme" android:preserveLegacyExternalStorage="true" android:requestLegacyExternalStorage="true" android:launchMode="singleInstance">
+	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="MSS6x Tool" android:supportsRtl="true" android:theme="@style/AppTheme" android:preserveLegacyExternalStorage="true" android:requestLegacyExternalStorage="true" android:launchMode="singleInstance">
 		<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/filepaths" />
 		</provider>
 	</application>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.BATTERY_STATS" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.INTERNET" />
